trunk/Archive/7e36c69eba173c05ed45d2daaaf53d94-7063104e283ed82d51a6fde7370c6e59/output
In file included from /usr/local/include/c++/4.8.0/x86_64-unknown-linux-gnu/bits/c++allocator.h:33:0,
                 from /usr/local/include/c++/4.8.0/bits/allocator.h:46,
                 from /usr/local/include/c++/4.8.0/vector:61,
                 from main.cpp:1:
/usr/local/include/c++/4.8.0/ext/new_allocator.h: In instantiation of 'struct __gnu_cxx::new_allocator<const int>':
/usr/local/include/c++/4.8.0/bits/allocator.h:92:11:   required from 'class std::allocator<const int>'
/usr/local/include/c++/4.8.0/bits/alloc_traits.h:90:43:   required from 'struct std::allocator_traits<std::allocator<const int> >'
/usr/local/include/c++/4.8.0/ext/alloc_traits.h:121:10:   required from 'struct __gnu_cxx::__alloc_traits<std::allocator<const int> >'
/usr/local/include/c++/4.8.0/bits/stl_vector.h:75:28:   required from 'struct std::_Vector_base<const int, std::allocator<const int> >'
/usr/local/include/c++/4.8.0/bits/stl_vector.h:210:11:   required from 'class std::vector<const int>'
main.cpp:6:28:   required from here
/usr/local/include/c++/4.8.0/ext/new_allocator.h:93:7: error: 'const _Tp* __gnu_cxx::new_allocator<_Tp>::address(__gnu_cxx::new_allocator<_Tp>::const_reference) const [with _Tp = const int; __gnu_cxx::new_allocator<_Tp>::const_pointer = const int*; __gnu_cxx::new_allocator<_Tp>::const_reference = const int&]' cannot be overloaded
       address(const_reference __x) const _GLIBCXX_NOEXCEPT
       ^
/usr/local/include/c++/4.8.0/ext/new_allocator.h:89:7: error: with '_Tp* __gnu_cxx::new_allocator<_Tp>::address(__gnu_cxx::new_allocator<_Tp>::reference) const [with _Tp = const int; __gnu_cxx::new_allocator<_Tp>::pointer = const int*; __gnu_cxx::new_allocator<_Tp>::reference = const int&]'
       address(reference __x) const _GLIBCXX_NOEXCEPT
       ^
/usr/local/include/c++/4.8.0/ext/new_allocator.h: In instantiation of 'void __gnu_cxx::new_allocator<_Tp>::deallocate(__gnu_cxx::new_allocator<_Tp>::pointer, __gnu_cxx::new_allocator<_Tp>::size_type) [with _Tp = const int; __gnu_cxx::new_allocator<_Tp>::pointer = const int*; __gnu_cxx::new_allocator<_Tp>::size_type = long unsigned int]':
/usr/local/include/c++/4.8.0/bits/stl_vector.h:174:4:   required from 'void std::_Vector_base<_Tp, _Alloc>::_M_deallocate(std::_Vector_base<_Tp, _Alloc>::pointer, std::size_t) [with _Tp = const int; _Alloc = std::allocator<const int>; std::_Vector_base<_Tp, _Alloc>::pointer = const int*; std::size_t = long unsigned int]'
/usr/local/include/c++/4.8.0/bits/stl_vector.h:161:33:   required from 'std::_Vector_base<_Tp, _Alloc>::~_Vector_base() [with _Tp = const int; _Alloc = std::allocator<const int>]'
/usr/local/include/c++/4.8.0/bits/stl_vector.h:249:15:   required from 'std::vector<_Tp, _Alloc>::vector() [with _Tp = const int; _Alloc = std::allocator<const int>]'
main.cpp:6:28:   required from here
/usr/local/include/c++/4.8.0/ext/new_allocator.h:110:30: error: invalid conversion from 'const void*' to 'void*' [-fpermissive]
       { ::operator delete(__p); }
                              ^
In file included from /usr/local/include/c++/4.8.0/ext/new_allocator.h:33:0,
                 from /usr/local/include/c++/4.8.0/x86_64-unknown-linux-gnu/bits/c++allocator.h:33,
                 from /usr/local/include/c++/4.8.0/bits/allocator.h:46,
                 from /usr/local/include/c++/4.8.0/vector:61,
                 from main.cpp:1:
/usr/local/include/c++/4.8.0/new:95:6: error:   initializing argument 1 of 'void operator delete(void*)' [-fpermissive]
 void operator delete(void*) _GLIBCXX_USE_NOEXCEPT
      ^
